Projects/Lab_09_codeGeneration/src/parser/y.output
   0  $accept : program $end

   1  program : opt_def_glob_var main

   2  glob_def : var_def
   3           | struct_def
   4           | func_def

   5  opt_def_glob_var : opt_def_glob_var glob_def
   6                   |

   7  var_def : p_type list_ident ';'
   8          | array list_ident ';'
   9          | struct_def ';'

  10  local_var_def : var_def
  11                | struct_def

  12  opt_list_local_var : opt_list_local_var local_var_def
  13                     |

  14  opt_list_fields : opt_list_fields type list_ident ';'
  15                  |

  16  struct_def : STRUCT '{' opt_list_fields '}' list_ident ';'

  17  main : VOID MAIN '(' ')' '{' opt_list_local_var statements '}'

  18  func_def : p_type ID '(' opt_list_param ')' '{' opt_list_local_var statements '}'
  19           | VOID ID '(' opt_list_param ')' '{' opt_list_local_var statements '}'

  20  list_param : list_param ',' p_type ID
  21             | p_type ID

  22  opt_list_param : list_param
  23                 |

  24  p_type : INT
  25         | DOUBLE
  26         | CHAR

  27  array : type '[' INT_CONSTANT ']'

  28  type : p_type
  29       | array
  30       | struct_def

  31  list_ident : list_ident ',' ID
  32             | ID

  33  statements : statements statement
  34             |

  35  statement : RETURN exp ';'
  36            | READ list_exp ';'
  37            | WRITE list_exp ';'
  38            | if_else
  39            | while
  40            | exp '=' exp ';'
  41            | ID '(' opt_list_exp ')' ';'

  42  while : WHILE '(' exp ')' '{' statements '}'
  43        | WHILE '(' exp ')' statement

  44  if_else : IF '(' exp ')' '{' statements '}' ELSE '{' statements '}'
  45          | IF '(' exp ')' '{' statements '}' ELSE statement
  46          | IF '(' exp ')' statement ELSE '{' statements '}'
  47          | IF '(' exp ')' statement ELSE statement
  48          | IF '(' exp ')' '{' statements '}'
  49          | IF '(' exp ')' statement

  50  opt_list_exp : list_exp
  51               |

  52  list_exp : list_exp ',' exp
  53           | exp

  54  exp : exp '+' exp
  55      | exp '*' exp
  56      | exp '/' exp
  57      | exp '-' exp
  58      | exp '%' exp
  59      | exp EQ exp
  60      | exp NOT_EQ exp
  61      | exp '>' exp
  62      | exp '<' exp
  63      | exp L_EQ exp
  64      | exp G_EQ exp
  65      | exp AND exp
  66      | exp OR exp
  67      | '(' p_type ')' exp
  68      | exp '[' exp ']'
  69      | exp '.' ID
  70      | ID '(' opt_list_exp ')'
  71      | '-' exp
  72      | '(' exp ')'
  73      | '!' exp
  74      | INT_CONSTANT
  75      | ID
  76      | CHAR_CONSTANT
  77      | REAL_CONSTANT

state 0
	$accept : . program $end  (0)
	opt_def_glob_var : .  (6)

	.  reduce 6

	program  goto 1
	opt_def_glob_var  goto 2


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : opt_def_glob_var . main  (1)
	opt_def_glob_var : opt_def_glob_var . glob_def  (5)

	VOID  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	INT  shift 7
	.  error

	main  goto 8
	glob_def  goto 9
	var_def  goto 10
	struct_def  goto 11
	func_def  goto 12
	p_type  goto 13
	array  goto 14
	type  goto 15


state 3
	main : VOID . MAIN '(' ')' '{' opt_list_local_var statements '}'  (17)
	func_def : VOID . ID '(' opt_list_param ')' '{' opt_list_local_var statements '}'  (19)

	ID  shift 16
	MAIN  shift 17
	.  error


state 4
	p_type : DOUBLE .  (25)

	.  reduce 25


state 5
	p_type : CHAR .  (26)

	.  reduce 26


state 6
	struct_def : STRUCT . '{' opt_list_fields '}' list_ident ';'  (16)

	'{'  shift 18
	.  error


state 7
	p_type : INT .  (24)

	.  reduce 24


state 8
	program : opt_def_glob_var main .  (1)

	.  reduce 1


state 9
	opt_def_glob_var : opt_def_glob_var glob_def .  (5)

	.  reduce 5


state 10
	glob_def : var_def .  (2)

	.  reduce 2


state 11
	glob_def : struct_def .  (3)
	var_def : struct_def . ';'  (9)
	type : struct_def .  (30)

	';'  shift 19
	VOID  reduce 3
	DOUBLE  reduce 3
	CHAR  reduce 3
	STRUCT  reduce 3
	INT  reduce 3
	'['  reduce 30


state 12
	glob_def : func_def .  (4)

	.  reduce 4


state 13
	var_def : p_type . list_ident ';'  (7)
	func_def : p_type . ID '(' opt_list_param ')' '{' opt_list_local_var statements '}'  (18)
	type : p_type .  (28)

	ID  shift 20
	'['  reduce 28

	list_ident  goto 21


state 14
	var_def : array . list_ident ';'  (8)
	type : array .  (29)

	ID  shift 22
	'['  reduce 29

	list_ident  goto 23


state 15
	array : type . '[' INT_CONSTANT ']'  (27)

	'['  shift 24
	.  error


state 16
	func_def : VOID ID . '(' opt_list_param ')' '{' opt_list_local_var statements '}'  (19)

	'('  shift 25
	.  error


state 17
	main : VOID MAIN . '(' ')' '{' opt_list_local_var statements '}'  (17)

	'('  shift 26
	.  error


state 18
	struct_def : STRUCT '{' . opt_list_fields '}' list_ident ';'  (16)
	opt_list_fields : .  (15)

	.  reduce 15

	opt_list_fields  goto 27


state 19
	var_def : struct_def ';' .  (9)

	.  reduce 9


state 20
	func_def : p_type ID . '(' opt_list_param ')' '{' opt_list_local_var statements '}'  (18)
	list_ident : ID .  (32)

	'('  shift 28
	';'  reduce 32
	','  reduce 32


state 21
	var_def : p_type list_ident . ';'  (7)
	list_ident : list_ident . ',' ID  (31)

	';'  shift 29
	','  shift 30
	.  error


state 22
	list_ident : ID .  (32)

	.  reduce 32


state 23
	var_def : array list_ident . ';'  (8)
	list_ident : list_ident . ',' ID  (31)

	';'  shift 31
	','  shift 30
	.  error


state 24
	array : type '[' . INT_CONSTANT ']'  (27)

	INT_CONSTANT  shift 32
	.  error


state 25
	func_def : VOID ID '(' . opt_list_param ')' '{' opt_list_local_var statements '}'  (19)
	opt_list_param : .  (23)

	DOUBLE  shift 4
	CHAR  shift 5
	INT  shift 7
	')'  reduce 23

	p_type  goto 33
	opt_list_param  goto 34
	list_param  goto 35


state 26
	main : VOID MAIN '(' . ')' '{' opt_list_local_var statements '}'  (17)

	')'  shift 36
	.  error


state 27
	opt_list_fields : opt_list_fields . type list_ident ';'  (14)
	struct_def : STRUCT '{' opt_list_fields . '}' list_ident ';'  (16)

	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	INT  shift 7
	'}'  shift 37
	.  error

	struct_def  goto 38
	p_type  goto 39
	array  goto 40
	type  goto 41


state 28
	func_def : p_type ID '(' . opt_list_param ')' '{' opt_list_local_var statements '}'  (18)
	opt_list_param : .  (23)

	DOUBLE  shift 4
	CHAR  shift 5
	INT  shift 7
	')'  reduce 23

	p_type  goto 33
	opt_list_param  goto 42
	list_param  goto 35


state 29
	var_def : p_type list_ident ';' .  (7)

	.  reduce 7


state 30
	list_ident : list_ident ',' . ID  (31)

	ID  shift 43
	.  error


state 31
	var_def : array list_ident ';' .  (8)

	.  reduce 8


state 32
	array : type '[' INT_CONSTANT . ']'  (27)

	']'  shift 44
	.  error


state 33
	list_param : p_type . ID  (21)

	ID  shift 45
	.  error


state 34
	func_def : VOID ID '(' opt_list_param . ')' '{' opt_list_local_var statements '}'  (19)

	')'  shift 46
	.  error


state 35
	list_param : list_param . ',' p_type ID  (20)
	opt_list_param : list_param .  (22)

	','  shift 47
	')'  reduce 22


state 36
	main : VOID MAIN '(' ')' . '{' opt_list_local_var statements '}'  (17)

	'{'  shift 48
	.  error


state 37
	struct_def : STRUCT '{' opt_list_fields '}' . list_ident ';'  (16)

	ID  shift 22
	.  error

	list_ident  goto 49


state 38
	type : struct_def .  (30)

	.  reduce 30


state 39
	type : p_type .  (28)

	.  reduce 28


state 40
	type : array .  (29)

	.  reduce 29


state 41
	opt_list_fields : opt_list_fields type . list_ident ';'  (14)
	array : type . '[' INT_CONSTANT ']'  (27)

	ID  shift 22
	'['  shift 24
	.  error

	list_ident  goto 50


state 42
	func_def : p_type ID '(' opt_list_param . ')' '{' opt_list_local_var statements '}'  (18)

	')'  shift 51
	.  error


state 43
	list_ident : list_ident ',' ID .  (31)

	.  reduce 31


state 44
	array : type '[' INT_CONSTANT ']' .  (27)

	.  reduce 27


state 45
	list_param : p_type ID .  (21)

	.  reduce 21


state 46
	func_def : VOID ID '(' opt_list_param ')' . '{' opt_list_local_var statements '}'  (19)

	'{'  shift 52
	.  error


state 47
	list_param : list_param ',' . p_type ID  (20)

	DOUBLE  shift 4
	CHAR  shift 5
	INT  shift 7
	.  error

	p_type  goto 53


state 48
	main : VOID MAIN '(' ')' '{' . opt_list_local_var statements '}'  (17)
	opt_list_local_var : .  (13)

	.  reduce 13

	opt_list_local_var  goto 54


state 49
	struct_def : STRUCT '{' opt_list_fields '}' list_ident . ';'  (16)
	list_ident : list_ident . ',' ID  (31)

	';'  shift 55
	','  shift 30
	.  error


state 50
	opt_list_fields : opt_list_fields type list_ident . ';'  (14)
	list_ident : list_ident . ',' ID  (31)

	';'  shift 56
	','  shift 30
	.  error


state 51
	func_def : p_type ID '(' opt_list_param ')' . '{' opt_list_local_var statements '}'  (18)

	'{'  shift 57
	.  error


state 52
	func_def : VOID ID '(' opt_list_param ')' '{' . opt_list_local_var statements '}'  (19)
	opt_list_local_var : .  (13)

	.  reduce 13

	opt_list_local_var  goto 58


state 53
	list_param : list_param ',' p_type . ID  (20)

	ID  shift 59
	.  error


state 54
	opt_list_local_var : opt_list_local_var . local_var_def  (12)
	main : VOID MAIN '(' ')' '{' opt_list_local_var . statements '}'  (17)
	statements : .  (34)

	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	INT  shift 7
	INT_CONSTANT  reduce 34
	REAL_CONSTANT  reduce 34
	RETURN  reduce 34
	ID  reduce 34
	WRITE  reduce 34
	IF  reduce 34
	READ  reduce 34
	WHILE  reduce 34
	CHAR_CONSTANT  reduce 34
	'!'  reduce 34
	'-'  reduce 34
	'('  reduce 34
	'}'  reduce 34

	var_def  goto 60
	struct_def  goto 61
	p_type  goto 62
	array  goto 14
	local_var_def  goto 63
	type  goto 15
	statements  goto 64


state 55
	struct_def : STRUCT '{' opt_list_fields '}' list_ident ';' .  (16)

	.  reduce 16


state 56
	opt_list_fields : opt_list_fields type list_ident ';' .  (14)

	.  reduce 14


state 57
	func_def : p_type ID '(' opt_list_param ')' '{' . opt_list_local_var statements '}'  (18)
	opt_list_local_var : .  (13)

	.  reduce 13

	opt_list_local_var  goto 65


state 58
	opt_list_local_var : opt_list_local_var . local_var_def  (12)
	func_def : VOID ID '(' opt_list_param ')' '{' opt_list_local_var . statements '}'  (19)
	statements : .  (34)

	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	INT  shift 7
	INT_CONSTANT  reduce 34
	REAL_CONSTANT  reduce 34
	RETURN  reduce 34
	ID  reduce 34
	WRITE  reduce 34
	IF  reduce 34
	READ  reduce 34
	WHILE  reduce 34
	CHAR_CONSTANT  reduce 34
	'!'  reduce 34
	'-'  reduce 34
	'('  reduce 34
	'}'  reduce 34

	var_def  goto 60
	struct_def  goto 61
	p_type  goto 62
	array  goto 14
	local_var_def  goto 63
	type  goto 15
	statements  goto 66


state 59
	list_param : list_param ',' p_type ID .  (20)

	.  reduce 20


state 60
	local_var_def : var_def .  (10)

	.  reduce 10


state 61
	var_def : struct_def . ';'  (9)
	local_var_def : struct_def .  (11)
	type : struct_def .  (30)

	';'  shift 19
	INT_CONSTANT  reduce 11
	REAL_CONSTANT  reduce 11
	RETURN  reduce 11
	ID  reduce 11
	DOUBLE  reduce 11
	WRITE  reduce 11
	IF  reduce 11
	CHAR  reduce 11
	STRUCT  reduce 11
	READ  reduce 11
	WHILE  reduce 11
	INT  reduce 11
	CHAR_CONSTANT  reduce 11
	'!'  reduce 11
	'-'  reduce 11
	'['  reduce 30
	'('  reduce 11
	'}'  reduce 11


state 62
	var_def : p_type . list_ident ';'  (7)
	type : p_type .  (28)

	ID  shift 22
	'['  reduce 28

	list_ident  goto 21


state 63
	opt_list_local_var : opt_list_local_var local_var_def .  (12)

	.  reduce 12


state 64
	main : VOID MAIN '(' ')' '{' opt_list_local_var statements . '}'  (17)
	statements : statements . statement  (33)

	INT_CONSTANT  shift 67
	REAL_CONSTANT  shift 68
	RETURN  shift 69
	ID  shift 70
	WRITE  shift 71
	IF  shift 72
	READ  shift 73
	WHILE  shift 74
	CHAR_CONSTANT  shift 75
	'!'  shift 76
	'-'  shift 77
	'('  shift 78
	'}'  shift 79
	.  error

	statement  goto 80
	exp  goto 81
	if_else  goto 82
	while  goto 83


state 65
	opt_list_local_var : opt_list_local_var . local_var_def  (12)
	func_def : p_type ID '(' opt_list_param ')' '{' opt_list_local_var . statements '}'  (18)
	statements : .  (34)

	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	INT  shift 7
	INT_CONSTANT  reduce 34
	REAL_CONSTANT  reduce 34
	RETURN  reduce 34
	ID  reduce 34
	WRITE  reduce 34
	IF  reduce 34
	READ  reduce 34
	WHILE  reduce 34
	CHAR_CONSTANT  reduce 34
	'!'  reduce 34
	'-'  reduce 34
	'('  reduce 34
	'}'  reduce 34

	var_def  goto 60
	struct_def  goto 61
	p_type  goto 62
	array  goto 14
	local_var_def  goto 63
	type  goto 15
	statements  goto 84


state 66
	func_def : VOID ID '(' opt_list_param ')' '{' opt_list_local_var statements . '}'  (19)
	statements : statements . statement  (33)

	INT_CONSTANT  shift 67
	REAL_CONSTANT  shift 68
	RETURN  shift 69
	ID  shift 70
	WRITE  shift 71
	IF  shift 72
	READ  shift 73
	WHILE  shift 74
	CHAR_CONSTANT  shift 75
	'!'  shift 76
	'-'  shift 77
	'('  shift 78
	'}'  shift 85
	.  error

	statement  goto 80
	exp  goto 81
	if_else  goto 82
	while  goto 83


state 67
	exp : INT_CONSTANT .  (74)

	.  reduce 74


state 68
	exp : REAL_CONSTANT .  (77)

	.  reduce 77


state 69
	statement : RETURN . exp ';'  (35)

	INT_CONSTANT  shift 67
	REAL_CONSTANT  shift 68
	ID  shift 86
	CHAR_CONSTANT  shift 75
	'!'  shift 76
	'-'  shift 77
	'('  shift 78
	.  error

	exp  goto 87


state 70
	statement : ID . '(' opt_list_exp ')' ';'  (41)
	exp : ID . '(' opt_list_exp ')'  (70)
	exp : ID .  (75)

	'('  shift 88
	EQ  reduce 75
	OR  reduce 75
	AND  reduce 75
	NOT_EQ  reduce 75
	G_EQ  reduce 75
	L_EQ  reduce 75
	'='  reduce 75
	'>'  reduce 75
	'<'  reduce 75
	'+'  reduce 75
	'-'  reduce 75
	'*'  reduce 75
	'/'  reduce 75
	'%'  reduce 75
	'['  reduce 75
	'.'  reduce 75


state 71
	statement : WRITE . list_exp ';'  (37)

	INT_CONSTANT  shift 67
	REAL_CONSTANT  shift 68
	ID  shift 86
	CHAR_CONSTANT  shift 75
	'!'  shift 76
	'-'  shift 77
	'('  shift 78
	.  error

	exp  goto 89
	list_exp  goto 90

